--- a/index.html
+++ b/index.html
@@ -31,23 +31,13 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="img/f1.jpg" alt="..." style="width:50%">
-      <div class="carousel-caption">
-        ...
-      </div>
     </div>
     <div class="item" >
       <img src="img/f2.jpg" alt="...">
-      <div class="carousel-caption">
-        ...
-      </div>
     </div>
     <div class="item">
       <img src="img/f3.jpg" alt="...">
-      <div class="carousel-caption">
-        ...
-      </div>
     </div>
-    ...
   </div>
 
   <form class="form-inline">
@@ -58,7 +48,7 @@
       <input type="text" class="form-control" id="exampleInputAmount" placeholder="なーに？"><!-- placeholder 何も入力されてない時表示される -->
     </div>
   </div>
-  <button type="submit" class="btn btn-primary">search</button>
+  <button type="submit" class="btn btn-primary">検索</button>
 </form>
 
   <!-- Controls -->
